--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gamaacademy",
+  "name": "boas-praticas-gama-academy",
   "version": "1.0.0",
-  "description": "Template FullJS",
+  "description": "Template FullJS feito para o Gama Academy",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
